--- a/uexSlidePager/res/values/dimens.xml
+++ b/uexSlidePager/res/values/dimens.xml
@@ -1,5 +1,11 @@
 <resources>
-
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    
+    <dimen name="slidingmenu_offset">60dp</dimen>
+    <dimen name="slidingmenu_width">240dp</dimen>
+    <dimen name="shadow_width">15dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="plugin_slidepager_indicator_corner_radius">12.0dip</dimen>
 </resources>
